Code refactoring [skip ci]