@@ -62,10 +62,11 @@ class Example2ControllerTest {
 
     public static Stream<Arguments> provideShouldReturnResponseBasedOnFilters() {
         return Stream.of(
-                Arguments.of(Arrays.asList("plainString eq 'eOMtThyhVNLWUZNRcBaQKxI'"), "examples/query/responses/example2_1.json"),
-                Arguments.of(Arrays.asList("tolower(plainString) eq 'eomtthyhvnlwuznrcbaqkxi'"), "examples/query/responses/example2_1.json"),
-                Arguments.of(Arrays.asList("plainString eq 'Some text'"), "examples/query/responses/example2_2.json"),
-                Arguments.of(Arrays.asList("startswith(plainString,'So')"), "examples/query/responses/example2_2.json")
+                Arguments.of(List.of("plainString eq 'eOMtThyhVNLWUZNRcBaQKxI'"), "examples/query/responses/example2_1.json"),
+                Arguments.of(List.of("tolower(plainString) eq 'eomtthyhvnlwuznrcbaqkxi'"), "examples/query/responses/example2_1.json"),
+                Arguments.of(List.of("plainString eq 'Some text'"), "examples/query/responses/example2_2.json"),
+                Arguments.of(List.of("startswith(plainString,'So')"), "examples/query/responses/example2_2.json"),
+                Arguments.of(Arrays.asList("startswith(plainString,'So')", "plainString eq 'Some text'"), "examples/query/responses/example2_2.json")
         );
     }
 
